--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 services:
   webapp:
     build:
-      context: ./project
-      dockerfile: Dockerfile.development
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 8000:8000
     volumes:
