--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3'
+
 services:
   webapp:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - 8000:8000
     volumes:
