--- a/deploy/hicoin-web-app-deployment.yaml
+++ b/deploy/hicoin-web-app-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: hicoin-web-app
-        image: 192.168.31.240:5000/hicoin-web-app
+        image: 192.168.31.240:5000/hicoin-web-app:v1.${BUILD_NUMBER}
         ports:
         - containerPort: 3000
           protocol: TCP
