--- a/deploy/hicoin-web-api-deployment.yaml
+++ b/deploy/hicoin-web-api-deployment.yaml
@@ -1,6 +1,6 @@
 # -------------------hicoin-web-api Deployment ------------------- #
 kind: Deployment
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
 metadata:
   labels:
     k8s-app: hicoin-web-api
