--- a/deploy/hicoin-web-api-service.yaml
+++ b/deploy/hicoin-web-api-service.yaml
@@ -6,9 +6,11 @@ metadata:
     k8s-app: hicoin-web-api
   name: hicoin-web-api
   namespace: default
-spec:  
+spec:    
+  type: NodePort
   ports:
     - port: 3000
       targetPort: 3000
+      nodePort: 9091
   selector:
     k8s-app: hicoin-web-api
