--- a/deploy/hicoin-web-app-deployment.yaml
+++ b/deploy/hicoin-web-app-deployment.yaml
@@ -28,5 +28,4 @@ spec:
             mountPath: /data
       volumes:
         - name: data
-          persistentVolumeClaim:
-            claimName: nfs
+          emptyDir: {}
