--- a/deploy/hicoin-web-app-deployment.yaml
+++ b/deploy/hicoin-web-app-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: test-app
-        image: 192.168.31.240:5000/test-app:v1.${BUILD_NUMBER}
+        image: ${REGISTRY_API}/test-app:v1.${BUILD_NUMBER}
         ports:
         - containerPort: 3000
           protocol: TCP
