--- a/deploy/1/hicoin-web-app-deployment.yaml
+++ b/deploy/1/hicoin-web-app-deployment.yaml
@@ -3,22 +3,22 @@ kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
   labels:
-    k8s-app: test-app
-  name: test-app
+    k8s-app: test.hicoin.io
+  name: test.hicoin.io
   namespace: default
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      k8s-app: test-app
+      k8s-app: test.hicoin.io
   template:
     metadata:
       labels:
-        k8s-app: test-app
+        k8s-app: test.hicoin.io
     spec:
       containers:
-      - name: test-app
+      - name: test.hicoin.io
         image: ${REGISTRY_API}/test-app:v1.${BUILD_NUMBER}
         ports:
         - containerPort: 3000
