--- a/deploy/1/hicoin-web-app-deployment.yaml
+++ b/deploy/1/hicoin-web-app-deployment.yaml
@@ -28,11 +28,11 @@ spec:
             mountPath: /data
       volumes:
       - name: data
-        ${DISABLE_NFS}  nfs:         
-        ${DISABLE_NFS}    server: 192.168.31.240
-        ${DISABLE_NFS}    path: /exports
-        ${DISABLE_EBS}  ebs:         
-        ${DISABLE_EBS}    server: 192.168.31.240
-        ${DISABLE_EBS}    path: /exports
+    ${N}nfs:         
+    ${N}  server: 192.168.31.240
+    ${N}  path: /exports
+    ${E}ebs:         
+    ${E}  server: 192.168.31.240
+    ${E}  path: /exports
 
 
