--- a/deploy/1/hicoin-web-app-deployment.yaml
+++ b/deploy/1/hicoin-web-app-deployment.yaml
@@ -23,9 +23,9 @@ spec:
         ports:
         - containerPort: 3000
           protocol: TCP
-        volumeMounts:
-          - name: data
-            mountPath: /data
+        # volumeMounts:
+        #   - name: data
+        #     mountPath: /data
       volumes:
       # ##LOCAL##- name: data
       #  ##LOCAL##nfs:         
