--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,10 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.1",
+    "ip": "^1.1.5",
     "jade": "~1.9.1",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "node-fetch": "^1.7.3"
+    "node-fetch": "^1.7.3",
+    "serve-favicon": "~2.2.0"
   }
 }
